# receipt-buddy

./: .gitignore  README.md  config.toml  initialize.py  pyproject.toml  receipt-buddy.xlsx  setup.py  update.py
email_service/: email_grabber.py  mail_grabber.py
model/: model_output.py  model_wrapper.py  system_prompt.txt
utils/: utils.py
writers/: excel_writer.py
